# solar_prediction

./: .gitignore  .pre-commit-config.yaml  README.md
services/feature-pipeline/: Makefile  hopsworks_utils.py  pipeline.py  pyproject.toml
services/feature-pipeline/config/: config.py  hopsworks_settings.env  meteostat_settings.env
services/feature-pipeline/etl/: extract.py  load.py  transform.py  utils.py
services/feature-pipeline/etl/data/: meteostat_data.txt
services/feature-pipeline/etl/table_config/: raw_data_table_config.yaml  raw_table_config.py
services/training-pipeline/: Makefile  feature_reader.py  hello.py  pipeline.py  pyproject.toml
services/training-pipeline/config/: config.py  training_settings.env
services/training-pipeline/models/: xgboost_model.py
services/training-pipeline/utils/: time_series_features.py
