[project]
name = "training-pipeline"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "loguru>=0.7.3",
    "optuna>=4.2.1",
    "pandas>=2.2.3",
    "polars>=1.22.0",
    "pydantic-settings>=2.7.1",
    "pydantic>=2.10.6",
    "scikit-learn>=1.6.1",
    "xgboost>=2.1.4",
]
